fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -164,7 +164,7 @@ body {
     justify-content: flex-start;
     align-items: center;
 	padding: 1em 2em;
-	margin-top: 12em;
+	margin-top: 13em;
 	width: 100%;
 	height: 100%;
 }
@@ -194,8 +194,8 @@ body {
 .homepage-description {
 	text-align: center;
 	width: 500px;
-	margin-top: 4em;
-	margin-bottom: 4em;
+	margin-top: 5em;
+	margin-bottom: 5em;
 	padding-left: 2em;
 	padding-right: 2em;
 }
@@ -453,7 +453,7 @@ body {
 	font-size: var(--fs-l);
 	font-weight: var(--fw-med);
 	text-align: center;
-	margin-top: 1em;
+	margin-top: 2em;
 	margin-bottom: 2em;
 }
 
